--- a/index.html
+++ b/index.html
@@ -1051,6 +1051,13 @@
       <img src="Icons/IFRC-icons-colour_Water-and-sanitation-WASH.png" alt="Water Overview" class="health-tab-icon">
       <span data-ar="نظرة عامة" data-en="Overview"></span>
     </button>
+    <button class="health-sub-tab-btn" id="wash-projects-btn" role="tab"
+  aria-controls="wash-projects" aria-selected="false" tabindex="-1"
+  data-health-tab="wash-projects" data-ar="المشاريع" data-en="Projects">
+  <img src="Icons/IFRC-icons-colour_Emergency-response.png" alt="WASH Projects" class="health-tab-icon">
+  <span data-ar="المشاريع" data-en="Projects"></span>
+</button>
+
   </div>
 
   <!-- Sub-tab Content -->
@@ -1073,6 +1080,52 @@
       </div>
     </section>
   </div>
+<!-- WASH Projects Sub-Tab -->
+<div class="health-tab-content" id="wash-projects" role="tabpanel" aria-labelledby="wash-projects-btn">
+  <section class="wash-projects-section">
+    <div class="container">
+      <h3 data-ar="المشاريع" data-en="Projects"></h3>
+
+      <h4>أولاً: إنشاء وتأهيل مواقع البنية التحتية لمقر جمعية الهلال الأحمر اليمني وفروعها:</h4>
+      <ul>
+        <li>تركيب منظومات طاقة شمسية للمركز الرئيسي.</li>
+        <li>تركيب منظومات طاقة شمسية لفروع الجوف وصعدة.</li>
+        <li>منظومة طاقة شمسية لفرع الأمانة (32,160 مستفيد).</li>
+        <li>مشروع المنظومة الشمسية لمخزن فرع حجة.</li>
+        <li>منظومة طاقة شمسية لمركز صحي في شبوة (25,000 مستفيد).</li>
+        <li>بناء الدور الثاني + طاقة شمسية لمركز مبين (25,000 مستفيد).</li>
+        <li>تأهيل مركز صحي عبس (12,000 مستفيد).</li>
+        <li>تأهيل مركز سمارة- إب (20,000 مستفيد).</li>
+        <li>ترميم المركز الرئيسي للهلال الأحمر.</li>
+        <li>قاعة تدريب بالدور الثاني في فرع أبين.</li>
+      </ul>
+
+      <h4>ثانياً: دعم البنية التحتية الحكومية:</h4>
+
+      <h5>‌أ- مشاريع المياه والإصحاح البيئي:</h5>
+      <ul>
+        <li>تأهيل منظومة طاقة شمسية لمياه الرجم - المحويت (35,000 مستفيد).</li>
+        <li>مشروع مياه الحضارم - تعز (4,500 مستفيد).</li>
+        <li>تأهيل 4 آبار في المعافر - تعز (8,050 مستفيد).</li>
+        <li>مشروع وادي عرفات - تعز (5,000 مستفيد).</li>
+        <li>نقاط توزيع مياه لبئر الكومية والحياد - حجة (8,400 مستفيد).</li>
+        <li>شبكة مياه عزلة القيلة بنجرة - حجة (6,420 مستفيد).</li>
+        <li>تأهيل بئر المجدر والرحبة - تعز (3,000 مستفيد).</li>
+        <li>توزيع مياه جليبيب وعريوج - حجة (2,220 مستفيد).</li>
+      </ul>
+
+      <h5>‌ب- المشاريع الداعمة والبنية التحتية العامة:</h5>
+      <ul>
+        <li>مشروع تقليل الفيضانات في صنعاء وذمار (40,000 مستفيد).</li>
+        <li>بناء 500 وحدة مأوى للمتضررين من الفيضانات - حجة والحديدة (3,500 مستفيد).</li>
+        <li>مبادرة رصف طريق المبهاء - تعز (5,000 مستفيد).</li>
+        <li>جدران ساندة للطريق في الشراقي - حجة (15,000 مستفيد).</li>
+        <li>تركيب حاوية عمليات مشتركة - صنعاء.</li>
+      </ul>
+
+    </div>
+  </section>
+</div>
 
 </div>
 
