--- a/index.html
+++ b/index.html
@@ -1122,6 +1122,28 @@
         <li>جدران ساندة للطريق في الشراقي - حجة (15,000 مستفيد).</li>
         <li>تركيب حاوية عمليات مشتركة - صنعاء.</li>
       </ul>
+<h5><span data-ar="‌ج- بناء وتأهيل المرافق التعليمية" data-en="C- Construction & Rehabilitation of Educational Facilities"></span></h5>
+<ul>
+  <li data-ar="تأهيل مدرسة الشهيد محمود شبور - مبين، حجة (2,500 طالب/طالبة)." data-en="Rehabilitation of Al-Shaheed Mahmoud Shabour School in Mabyan, Hajjah (2,500 students)."></li>
+  <li data-ar="تأهيل مرافق المياه والصرف الصحي - مدرسة فاطمة الزهراء - صنعاء (2,000 طالب/طالبة)." data-en="Rehabilitation of WASH facilities at Fatima Al-Zahraa School in Sana'a (2,000 students)."></li>
+  <li data-ar="إضافة فصلين - مدرسة 11 فبراير - الشمايتين، تعز (200 طالب/طالبة)." data-en="Added 2 classrooms at 11 February School in Al-Shamayatayn, Taiz (200 students)."></li>
+  <li data-ar="إضافة فصلين - مدرسة 26 سبتمبر - الشمايتين، تعز (150 طالب/طالبة)." data-en="Added 2 classrooms at 26 September School in Al-Shamayatayn, Taiz (150 students)."></li>
+  <li data-ar="فصل + تشطيب 5 فصول - مدرسة شرشور، شبوة (5,130 طالب/طالبة)." data-en="Built 1 classroom and finished 5 at Sharshour School, Shabwa (5,130 students)."></li>
+</ul>
+
+<h5><span data-ar="‌د- مشاريع اللجنة الدولية التي يشرف عليها الهلال الأحمر" data-en="D- ICRC-Supported Projects Supervised by YRCS"></span></h5>
+<ul>
+  <li data-ar="متابعة خطوط الصرف الصحي - تعز." data-en="Supervision of sewer pipeline projects in Taiz."></li>
+  <li data-ar="تأهيل وحدة الفكيكة الصحية - مقبنة، تعز (5,000 مستفيد)." data-en="Rehabilitation of Al-Fakeeka Health Unit in Maqbana, Taiz (5,000 beneficiaries)."></li>
+  <li data-ar="حفر 3 آبار ارتوازية - مشروع مياه حيس، الحديدة (45,000 مستفيد)." data-en="Drilling of 3 artesian wells for Hays water project, Al-Hudaydah (45,000 beneficiaries)."></li>
+  <li data-ar="مشروع مركز الحزمه الصحي - مأرب." data-en="Al-Hazmah Health Center Project – Marib."></li>
+</ul>
+
+<h5><span data-ar="‌ه- أنشطة التدريب والتوعية" data-en="E- Training & Awareness Activities"></span></h5>
+<ul>
+  <li data-ar="دورات تدريبية WASH لمتطوعي فرعي حجة والتربة - تعز (20 مستفيد)." data-en="WASH training sessions for Hajjah & Al-Turba (Taiz) volunteers (20 participants)."></li>
+  <li data-ar="جلسات توعية ميدانية - حزم الجوف (بدأت بتدريب متطوعين ثم 40 مستفيد بالتدريب المجتمعي)." data-en="Field awareness activities in Al-Hazm, Al-Jawf, starting with volunteer training then community sessions (40 beneficiaries)."></li>
+</ul>
 
     </div>
   </section>
