--- a/index.html
+++ b/index.html
@@ -1065,18 +1065,22 @@
     <section class="wash-overview-section">
       <div class="container">
         <h3 data-ar="نظرة عامة على أزمة المياه" data-en="Water Crisis Overview"></h3>
-        <p>
-          تُمثل أزمة المياه في اليمن أحد التحديات الإنسانية والإنمائية الأكثر إلحاحاً، حيث تفاقمت حدتها نتيجة عوامل مركبة تشمل النمو السكاني المتسارع، وتدهور البنية التحتية، وسوء إدارة الموارد المائية، والتأثيرات المتزايدة للتغير المناخي.
-        </p>
-        <p>
-          وقد أدى الصراع المستمر إلى تفاقم الأزمة من خلال إلحاق أضرار جسيمة بشبكات المياه، وتعطيل أنظمة التوزيع، وتقييد الوصول إلى المصادر الآمنة.
-        </p>
-        <p>
-          وساهم نقص خدمات المياه والإصحاح البيئي في انتشار الأمراض المنقولة بالمياه، مما عمّق من الحالة الإنسانية الحرجة.
-        </p>
-        <p>
-          لذا، تتطلب المعالجة الفاعلة تبني استراتيجيات متكاملة تجمع بين تعزيز البنية التحتية، وترشيد الإدارة، وبناء القدرة على الصمود في وجه التحديات المناخية.
-        </p>
+         <p data-ar="تُمثل أزمة المياه في اليمن أحد التحديات الإنسانية والإنمائية الأكثر إلحاحاً، حيث تفاقمت حدتها نتيجة عوامل مركبة تشمل النمو السكاني المتسارع، وتدهور البنية التحتية، وسوء إدارة الموارد المائية، والتأثيرات المتزايدة للتغير المناخي." 
+   data-en="The water crisis in Yemen is one of the most pressing humanitarian and development challenges, intensified by a combination of factors including rapid population growth, deteriorating infrastructure, poor water resource management, and the increasing impact of climate change.">
+</p>
+
+<p data-ar="وقد أدى الصراع المستمر إلى تفاقم الأزمة من خلال إلحاق أضرار جسيمة بشبكات المياه، وتعطيل أنظمة التوزيع، وتقييد الوصول إلى المصادر الآمنة." 
+   data-en="The ongoing conflict has worsened the crisis by causing severe damage to water networks, disrupting distribution systems, and limiting access to safe water sources.">
+</p>
+
+<p data-ar="وساهم نقص خدمات المياه والإصحاح البيئي في انتشار الأمراض المنقولة بالمياه، مما عمّق من الحالة الإنسانية الحرجة." 
+   data-en="The lack of water and sanitation services has contributed to the spread of waterborne diseases, deepening the humanitarian crisis.">
+</p>
+
+<p data-ar="لذا، تتطلب المعالجة الفاعلة تبني استراتيجيات متكاملة تجمع بين تعزيز البنية التحتية، وترشيد الإدارة، وبناء القدرة على الصمود في وجه التحديات المناخية." 
+   data-en="Effective solutions require integrated strategies that combine infrastructure enhancement, efficient management, and resilience building against climate challenges.">
+</p>
+
       </div>
     </section>
   </div>
@@ -1086,42 +1090,43 @@
     <div class="container">
       <h3 data-ar="المشاريع" data-en="Projects"></h3>
 
-      <h4>أولاً: إنشاء وتأهيل مواقع البنية التحتية لمقر جمعية الهلال الأحمر اليمني وفروعها:</h4>
-      <ul>
-        <li>تركيب منظومات طاقة شمسية للمركز الرئيسي.</li>
-        <li>تركيب منظومات طاقة شمسية لفروع الجوف وصعدة.</li>
-        <li>منظومة طاقة شمسية لفرع الأمانة (32,160 مستفيد).</li>
-        <li>مشروع المنظومة الشمسية لمخزن فرع حجة.</li>
-        <li>منظومة طاقة شمسية لمركز صحي في شبوة (25,000 مستفيد).</li>
-        <li>بناء الدور الثاني + طاقة شمسية لمركز مبين (25,000 مستفيد).</li>
-        <li>تأهيل مركز صحي عبس (12,000 مستفيد).</li>
-        <li>تأهيل مركز سمارة- إب (20,000 مستفيد).</li>
-        <li>ترميم المركز الرئيسي للهلال الأحمر.</li>
-        <li>قاعة تدريب بالدور الثاني في فرع أبين.</li>
-      </ul>
+       <h4><span data-ar="أولاً: إنشاء وتأهيل مواقع البنية التحتية لمقر جمعية الهلال الأحمر اليمني وفروعها" data-en="1. Construction and Rehabilitation of YRCS HQ and Branch Infrastructure"></span></h4>
+<ul>
+  <li data-ar="تركيب منظومات طاقة شمسية للمركز الرئيسي." data-en="Installation of solar systems at the main headquarters."></li>
+  <li data-ar="تركيب منظومات طاقة شمسية لفروع الجوف وصعدة." data-en="Installation of solar systems for Al-Jawf and Sa'dah branches."></li>
+  <li data-ar="منظومة طاقة شمسية لفرع الأمانة (32,160 مستفيد)." data-en="Solar system for the Amanat Al-Asimah branch (32,160 beneficiaries)."></li>
+  <li data-ar="مشروع المنظومة الشمسية لمخزن فرع حجة." data-en="Solar project for the storage facility of Hajjah branch."></li>
+  <li data-ar="منظومة طاقة شمسية لمركز صحي في شبوة (25,000 مستفيد)." data-en="Solar system for a health center in Shabwa (25,000 beneficiaries)."></li>
+  <li data-ar="بناء الدور الثاني + طاقة شمسية لمركز مبين (25,000 مستفيد)." data-en="Second floor construction + solar for Mabin center (25,000 beneficiaries)."></li>
+  <li data-ar="تأهيل مركز صحي عبس (12,000 مستفيد)." data-en="Rehabilitation of Abs health center (12,000 beneficiaries)."></li>
+  <li data-ar="تأهيل مركز سمارة- إب (20,000 مستفيد)." data-en="Rehabilitation of Samara Health Center in Ibb (20,000 beneficiaries)."></li>
+  <li data-ar="ترميم المركز الرئيسي للهلال الأحمر." data-en="Renovation of the main Red Crescent HQ."></li>
+  <li data-ar="قاعة تدريب بالدور الثاني في فرع أبين." data-en="Training hall built on second floor of Abyan branch."></li>
+</ul>
 
-      <h4>ثانياً: دعم البنية التحتية الحكومية:</h4>
+<h4><span data-ar="ثانياً: دعم البنية التحتية الحكومية" data-en="2. Government Infrastructure Support"></span></h4>
 
-      <h5>‌أ- مشاريع المياه والإصحاح البيئي:</h5>
-      <ul>
-        <li>تأهيل منظومة طاقة شمسية لمياه الرجم - المحويت (35,000 مستفيد).</li>
-        <li>مشروع مياه الحضارم - تعز (4,500 مستفيد).</li>
-        <li>تأهيل 4 آبار في المعافر - تعز (8,050 مستفيد).</li>
-        <li>مشروع وادي عرفات - تعز (5,000 مستفيد).</li>
-        <li>نقاط توزيع مياه لبئر الكومية والحياد - حجة (8,400 مستفيد).</li>
-        <li>شبكة مياه عزلة القيلة بنجرة - حجة (6,420 مستفيد).</li>
-        <li>تأهيل بئر المجدر والرحبة - تعز (3,000 مستفيد).</li>
-        <li>توزيع مياه جليبيب وعريوج - حجة (2,220 مستفيد).</li>
-      </ul>
+<h5><span data-ar="‌أ- مشاريع المياه والإصحاح البيئي" data-en="A- Water and Sanitation Projects"></span></h5>
+<ul>
+  <li data-ar="تأهيل منظومة طاقة شمسية لمياه الرجم - المحويت (35,000 مستفيد)." data-en="Solar system for Rajm Water Project in Al-Mahwit (35,000 beneficiaries)."></li>
+  <li data-ar="مشروع مياه الحضارم - تعز (4,500 مستفيد)." data-en="Al-Hadhram Water Project in Taiz (4,500 beneficiaries)."></li>
+  <li data-ar="تأهيل 4 آبار في المعافر - تعز (8,050 مستفيد)." data-en="Rehabilitation of 4 wells in Al-Ma'afar, Taiz (8,050 beneficiaries)."></li>
+  <li data-ar="مشروع وادي عرفات - تعز (5,000 مستفيد)." data-en="Wadi Arafat Water Project in Taiz (5,000 beneficiaries)."></li>
+  <li data-ar="نقاط توزيع مياه لبئر الكومية والحياد - حجة (8,400 مستفيد)." data-en="Water distribution points for Al-Kumiya and Al-Hayyad wells in Hajjah (8,400 beneficiaries)."></li>
+  <li data-ar="شبكة مياه عزلة القيلة بنجرة - حجة (6,420 مستفيد)." data-en="Water network for Al-Qeila isolation in Hajjah (6,420 beneficiaries)."></li>
+  <li data-ar="تأهيل بئر المجدر والرحبة - تعز (3,000 مستفيد)." data-en="Rehabilitation of Al-Majdar and Al-Rahbah wells in Taiz (3,000 beneficiaries)."></li>
+  <li data-ar="توزيع مياه جليبيب وعريوج - حجة (2,220 مستفيد)." data-en="Water distribution for Jalibib and Aroyouj in Hajjah (2,220 beneficiaries)."></li>
+</ul>
 
-      <h5>‌ب- المشاريع الداعمة والبنية التحتية العامة:</h5>
-      <ul>
-        <li>مشروع تقليل الفيضانات في صنعاء وذمار (40,000 مستفيد).</li>
-        <li>بناء 500 وحدة مأوى للمتضررين من الفيضانات - حجة والحديدة (3,500 مستفيد).</li>
-        <li>مبادرة رصف طريق المبهاء - تعز (5,000 مستفيد).</li>
-        <li>جدران ساندة للطريق في الشراقي - حجة (15,000 مستفيد).</li>
-        <li>تركيب حاوية عمليات مشتركة - صنعاء.</li>
-      </ul>
+<h5><span data-ar="‌ب- المشاريع الداعمة والبنية التحتية العامة" data-en="B- Support Projects & Public Infrastructure"></span></h5>
+<ul>
+  <li data-ar="مشروع تقليل الفيضانات في صنعاء وذمار (40,000 مستفيد)." data-en="Flood risk mitigation project in Sana'a and Dhamar (40,000 beneficiaries)."></li>
+  <li data-ar="بناء 500 وحدة مأوى للمتضررين من الفيضانات - حجة والحديدة (3,500 مستفيد)." data-en="500 shelter units for flood victims in Hajjah and Hodeidah (3,500 beneficiaries)."></li>
+  <li data-ar="مبادرة رصف طريق المبهاء - تعز (5,000 مستفيد)." data-en="Road paving initiative in Al-Mabahaa, Taiz (5,000 beneficiaries)."></li>
+  <li data-ar="جدران ساندة للطريق في الشراقي - حجة (15,000 مستفيد)." data-en="Retaining walls for Al-Shuraqi road in Hajjah (15,000 beneficiaries)."></li>
+  <li data-ar="تركيب حاوية عمليات مشتركة - صنعاء." data-en="Installation of joint operations container in Sana'a."></li>
+</ul>
+
 <h5><span data-ar="‌ج- بناء وتأهيل المرافق التعليمية" data-en="C- Construction & Rehabilitation of Educational Facilities"></span></h5>
 <ul>
   <li data-ar="تأهيل مدرسة الشهيد محمود شبور - مبين، حجة (2,500 طالب/طالبة)." data-en="Rehabilitation of Al-Shaheed Mahmoud Shabour School in Mabyan, Hajjah (2,500 students)."></li>
