--- a/index.html
+++ b/index.html
@@ -1044,8 +1044,8 @@
   </section>
 
   <!-- Sub-tab Buttons -->
-  <div class="wash-sub-tabs" role="tablist">
-    <button class="wash-sub-tab-btn active" id="wash-overview-btn" role="tab"
+  <div class="health-sub-tabs" role="tablist">
+    <button class="health-sub-tab-btn active" id="wash-overview-btn" role="tab"
       aria-controls="wash-overview" aria-selected="true" tabindex="0"
       data-health-tab="wash-overview" data-ar="نظرة عامة" data-en="Overview">
       <img src="Icons/IFRC-icons-colour_Water-and-sanitation-WASH.png" alt="Water Overview" class="wash-tab-icon">
@@ -1067,7 +1067,7 @@
   </div>
 
   <!-- Sub-tab Content -->
-  <div class="wash-tab-content active" id="wash-overview" role="tabpanel" aria-labelledby="wash-overview-btn">
+  <div class="health-tab-content active" id="wash-overview" role="tabpanel" aria-labelledby="wash-overview-btn">
     <section class="wash-overview-section">
       <div class="container">
         <h3 data-ar="نظرة عامة على أزمة المياه" data-en="Water Crisis Overview"></h3>
@@ -1091,7 +1091,7 @@
     </section>
   </div>
 <!-- WASH Projects Sub-Tab -->
-<div class="wash-tab-content" id="wash-projects" role="tabpanel" aria-labelledby="wash-projects-btn">
+<div class="health-tab-content" id="wash-projects" role="tabpanel" aria-labelledby="wash-projects-btn">
   <section class="wash-projects-section">
     <div class="container">
       <h3 data-ar="المشاريع" data-en="Projects"></h3>
@@ -1159,10 +1159,7 @@
     </div>
   </section>
 </div>
-
-</div>
-
-<div class="wash-tab-content" id="wash-koica" role="tabpanel" aria-labelledby="wash-koica-btn">
+<div class="health-tab-content" id="wash-koica" role="tabpanel" aria-labelledby="wash-koica-btn">
   <section class="wash-koica-section">
     <div class="container">
       <h3 data-ar="مشروع المياه من أجل السلام والحد من التوترات الناشئة من نقص المياه (KOICA)" 
@@ -1190,6 +1187,10 @@
     </div>
   </section>
 </div>
+
+</div>
+
+
 <!-- ================= CHARTS ================= -->
 <section class="tab-content" id="tab-charts" role="tabpanel" aria-labelledby="tab-charts-btn">
   <section class="charts-section">
