--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@
   <img src="Icons/IFRC-icons-colour_Peace-and-Conflict.png" alt="KOICA Project Icon" class="health-tab-icon">
   <span data-ar="مشروع المياه من أجل السلام" data-en="Water for Peace Project"></span>
 </button>
-<button class="wash-sub-tab-btn" id="wash-ppp-btn" role="tab"
+<button class="health-sub-tab-btn" id="wash-ppp-btn" role="tab"
   aria-controls="wash-ppp" aria-selected="false" tabindex="-1"
   data-health-tab="wash-ppp" data-ar="مشروع الشراكة البرامجية" data-en="PPP Project">
   <img src="Icons/IFRC-icons-colour_Partnership.png" alt="PPP Icon" class="health-tab-icon">
@@ -1074,13 +1074,7 @@
 </button>
 
   </div>
-<div class="progress-stat">
-  <label data-ar="عدد المستفيدين" data-en="Beneficiaries"></label>
-  <div class="progress-bar-container">
-    <div class="progress-bar" style="width: 75%;">37,000</div>
-  </div>
-</div>
-<div id="school-map" style="height: 400px;"></div>
+ 
 
   <!-- Sub-tab Content -->
   <div class="health-tab-content active" id="wash-overview" role="tabpanel" aria-labelledby="wash-overview-btn">
@@ -1237,11 +1231,7 @@
       </div>
     </div>
 
-    <!-- Interactive Map -->
-    <h4 data-ar="خريطة المواقع" data-en="Project Location Map"></h4>
-    <div id="ppp-map" style="height: 350px;"></div>
-
-  </div>
+     
 </section>
 
 </div>
