--- a/index.html
+++ b/index.html
@@ -663,6 +663,15 @@
 <div class="stats-grid impact-grid" id="sectorDevelopmentGrid">
 </div>
 </div>
+<div class="orgdev-sub-tabs" role="tablist">
+  <!-- أزرار تبويبات أخرى هنا -->
+  <button class="orgdev-sub-tab-btn" id="orgdev-infrastructure-btn" role="tab"
+    aria-controls="orgdev-infrastructure" aria-selected="false" tabindex="-1"
+    data-health-tab="orgdev-infrastructure" data-ar="الأعمال التطويرية" data-en="Development Works">
+    <img src="Icons/IFRC-icons-colour_Infrastructure.png" alt="Infrastructure Icon" class="health-tab-icon">
+    <span data-ar="الأعمال التطويرية" data-en="Development Works"></span>
+  </button>
+</div>
 </section>
 </div>
 <div class="sub-tab-content" id="sub-disasters" role="tabpanel" aria-labelledby="sub-disasters-btn">
@@ -1227,6 +1236,27 @@
 </div>
 
 
+</div>
+<div class="orgdev-tab-content" id="orgdev-infrastructure" role="tabpanel" aria-labelledby="orgdev-infrastructure-btn">
+  <section class="orgdev-infrastructure-section">
+    <div class="container">
+      <h3 data-ar="الأعمال التطويرية للمركز الرئيسي والفروع" data-en="Developmental Works for HQ and Branches"></h3>
+      <ul>
+        <li data-ar="تجهيز 5 قاعات تدريبية نموذجية..." data-en="Equipped 5 modern training halls..."></li>
+        <li data-ar="تغطية شاملة لـ 22 فرع..." data-en="Comprehensive coverage of 22 branches..."></li>
+        <li data-ar="تمتلك الجمعية 15 مقراً..." data-en="15 owned premises ensuring institutional sustainability..."></li>
+        <li data-ar="تشغيل وتطوير 28 مركزاً..." data-en="Operation and development of 28 primary healthcare centers..."></li>
+        <li data-ar="اسطول مكون من 90 سيارة..." data-en="Fleet of 90 ambulances for rapid response..."></li>
+        <li data-ar="امتلاك 5 مخازن استراتيجية..." data-en="5 strategic warehouses and 4 operational stores..."></li>
+        <li data-ar="تركيب وتفعيل 17 منظومة..." data-en="17 solar systems installed to reduce operational costs..."></li>
+        <li data-ar="إنشاء إدارة متكاملة للوجيستك." data-en="Established a dedicated logistics management unit."></li>
+        <li data-ar="تعزيز الهوية البصرية..." data-en="Enhanced visual identity on premises and vehicles..."></li>
+        <li data-ar="تدريب مدربين لمكافحة الفساد..." data-en="54 staff trained on anti-corruption and transparency..."></li>
+        <li data-ar="تطبيق نظام ERP..." data-en="ERP implemented for finance/admin ops in 7 branches."></li>
+        <li data-ar="الانتهاء من الهيكل التنظيمي..." data-en="Completed org structure, job descriptions, evaluations."></li>
+      </ul>
+    </div>
+  </section>
 </div>
 
 </div>
