--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
 </div>
 <div class="orgdev-sub-tabs" role="tablist">
   <!-- أزرار تبويبات أخرى هنا -->
-  <button class="orgdev-sub-tab-btn" id="orgdev-infrastructure-btn" role="tab"
+  <button class="health-sub-tab-btn" id="orgdev-infrastructure-btn" role="tab"
     aria-controls="orgdev-infrastructure" aria-selected="false" tabindex="-1"
     data-health-tab="orgdev-infrastructure" data-ar="الأعمال التطويرية" data-en="Development Works">
     <img src="Icons/IFRC-icons-colour_Infrastructure.png" alt="Infrastructure Icon" class="health-tab-icon">
