--- a/index.html
+++ b/index.html
@@ -142,6 +142,31 @@
 
   </div>
 </section>
+ <section class="charts-section">
+  <div class="container charts-grid">
+
+    <!-- Category Chart -->
+    <div class="chart-card">
+      <canvas id="categoryChart"></canvas>
+    </div>
+
+    <!-- Donor Chart -->
+    <div class="chart-card">
+      <canvas id="donorChart"></canvas>
+    </div>
+
+    <!-- Activities Chart -->
+    <div class="chart-card">
+      <canvas id="activitiesChart"></canvas>
+    </div>
+
+    <!-- Ambulance Monthly Chart -->
+    <div class="chart-card">
+      <canvas id="ambulanceChart"></canvas>
+    </div>
+
+  </div>
+</section>
 
   <!-- SECTOR IMPACT TABLE -->
   <section class="table-section">
@@ -1300,6 +1325,7 @@
       </div>
     </div>
   </section>
+  
 </section>
 
 <!-- ================= TRAINING ================= -->
@@ -1348,7 +1374,25 @@
     </div>
   </section>
 </section>
-
+<section class="table-section">
+  <div class="container">
+    <div class="table-wrapper">
+      <table class="projects-table">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th data-ar="الربع" data-en="Quarter"></th>
+            <th data-ar="النشاط" data-en="Activity"></th>
+            <th data-ar="عدد الأنشطة" data-en="Count"></th>
+            <th data-ar="الموقع" data-en="Location"></th>
+            <th data-ar="عدد المستفيدين" data-en="Beneficiaries"></th>
+          </tr>
+        </thead>
+        <tbody id="mediaTableBody"></tbody>
+      </table>
+    </div>
+  </div>
+</section>
 <!-- ================= GALLERY ================= -->
 <section class="tab-content" id="tab-gallery" role="tabpanel" aria-labelledby="tab-gallery-btn">
   <section class="gallery-section">
