--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
 </div>
 </div>
   </section>
-  <div class="orgdev-sub-tabs" role="tablist">
+  <div class="health-sub-tabs" role="tablist">
   <!-- أزرار تبويبات أخرى هنا -->
   <button class="health-sub-tab-btn" id="orgdev-infrastructure-btn" role="tab"
     aria-controls="orgdev-infrastructure" aria-selected="false" tabindex="-1"
@@ -699,7 +699,7 @@
   </button>
 
 </div>
-<div class="orgdev-tab-content" id="orgdev-infrastructure" role="tabpanel" aria-labelledby="orgdev-infrastructure-btn">
+<div class="health-tab-content" id="orgdev-infrastructure" role="tabpanel" aria-labelledby="orgdev-infrastructure-btn">
   <section class="orgdev-infrastructure-section">
     <div class="container">
       <h3 data-ar="الأعمال التطويرية للمركز الرئيسي والفروع" data-en="Developmental Works for HQ and Branches"></h3>
