--- a/index.html
+++ b/index.html
@@ -39,12 +39,25 @@
 
     <button class="tab-btn" id="tab-sector-impact-btn" role="tab" aria-controls="tab-sector-impact" aria-selected="false" tabindex="-1" data-tab="tab-sector-impact"
       data-ar="الأثر القطاعي" data-en="Sector Impact"></button>
+    <button class="sub-tab-btn" id="sub-health-btn" role="tab" aria-controls="sub-health" aria-selected="false" tabindex="-1" data-sub-tab="sub-health" data-ar="الصحة والرعاية" data-en="Health & Care">
+    <img src="Icons/IFRC-icons-colour_Emergency-health-stethoscope.png" alt="Health & Care" class="sub-tab-icon">
+    <span data-ar="الصحة والرعاية" data-en="Health & Care"></span>
+  </button>
+  <button class="sub-tab-btn" id="sub-development-btn" role="tab" aria-controls="sub-development" aria-selected="false" tabindex="-1" data-sub-tab="sub-development" data-ar="دعم تطوير الجمعية" data-en="Organizational Development">
+    <img src="Icons/IFRC-icons-colour_Community-engagement.png" alt="Organizational Development" class="sub-tab-icon">
+    <span data-ar="دعم تطوير الجمعية" data-en="Organizational Development"></span>
+  </button>
+  <button class="sub-tab-btn" id="sub-disasters-btn" role="tab" aria-controls="sub-disasters" aria-selected="false" tabindex="-1" data-sub-tab="sub-disasters" data-ar="الكوارث والأزمات" data-en="Disasters & Crises">
+    <img src="Icons/IFRC-icons-colour_Extreme-weather.png" alt="Disasters & Crises" class="sub-tab-icon">
+    <span data-ar="الكوارث والأزمات" data-en="Disasters & Crises"></span>
+  </button>
+  <button class="sub-tab-btn" id="sub-wash-btn" role="tab" aria-controls="sub-wash" aria-selected="false" tabindex="-1" data-sub-tab="sub-wash" data-ar="المياه والإسكان" data-en="Water & Shelter">
+    <img src="Icons/IFRC-icons-colour_Water-and-sanitation-WASH.png" alt="Water & Shelter" class="sub-tab-icon">
+    <span data-ar="المياه والإسكان" data-en="Water & Shelter"></span>
+  </button>
 
     <button class="tab-btn" id="tab-charts-btn" role="tab" aria-controls="tab-charts" aria-selected="false" tabindex="-1" data-tab="tab-charts"
       data-ar="الرسوم البيانية" data-en="Charts"></button>
-
-    <button class="tab-btn" id="tab-projects-btn" role="tab" aria-controls="tab-projects" aria-selected="false" tabindex="-1" data-tab="tab-projects"
-      data-ar="المشاريع" data-en="Projects"></button>
 
     <button class="tab-btn" id="tab-training-btn" role="tab" aria-controls="tab-training" aria-selected="false" tabindex="-1" data-tab="tab-training"
       data-ar="التدريب" data-en="Training"></button>
@@ -73,7 +86,6 @@
     <div class="container">
       <div class="stats-grid">
         <div class="stat-card"><i class="fas fa-users"></i><div class="stat-number" data-key="total_beneficiaries">0</div><span data-ar="إجمالي المستفيدين" data-en="Total Beneficiaries"></span></div>
-        <div class="stat-card"><i class="fas fa-project-diagram"></i><div class="stat-number" data-key="projects">0</div><span data-ar="مشاريع الاستجابة" data-en="Response Projects"></span></div>
         <div class="stat-card"><i class="fas fa-ambulance"></i><div class="stat-number" data-key="ambulance_cases">0</div><span data-ar="إحالات إسعافية" data-en="Ambulance Referrals"></span></div>
         <div class="stat-card"><i class="fas fa-bomb"></i><div class="stat-number" data-key="mine_awareness">0</div><span data-ar="توعية بمخاطر الألغام" data-en="Mine Risk Awareness"></span></div>
         <div class="stat-card"><i class="fas fa-graduation-cap"></i><div class="stat-number" data-key="trainees">0</div><span data-ar="المتدربون" data-en="Trainees"></span></div>
